--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
-	"name": "maclof/kubernetes-client",
+	"name": "stackout/kubernetes-client",
 	"description": "A simple yet elegant client for accessing and controlling a Kubernetes cluster.",
 	"keywords": ["kubernetes", "docker", "container", "cluster", "guzzle", "guzzlehttp"],
 	"authors": [
 		{
 			"name": "Marc Lough",
 			"homepage": "http://maclof.com"
+		},
+		{
+			"name": "Ryan Hein",
+			"homepage": "https://ryanhein.com"
 		}
 	],
 	"license" : "MIT",
@@ -23,7 +27,7 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"Maclof\\Kubernetes\\": "src/"
+			"Stackout\\Kubernetes\\": "src/"
 		}
 	},
 	"autoload-dev": {
